// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Testing: RecipesBlock > should render 1`] = `
<div>
  <div
    class="MuiStack-root _recipesBlockWrapper_4b0ee0 css-1ucnu3w-MuiStack-root"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root _recipeCardWrapper_a06f98 css-bhp9pd-MuiPaper-root-MuiCard-root"
    >
      <div
        class="MuiStack-root _recipeContainer_a06f98 css-nen11g-MuiStack-root"
      >
        <img
          class="_recipeCardImage_a06f98"
          id="00000000-0000-0000-0000-000000000001"
          src="test/image/src/1"
        />
        <div
          class="MuiStack-root _recipeData_a06f98 css-nen11g-MuiStack-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap _recipeName_a06f98 css-fvtpii-MuiTypography-root"
          >
            Test Recipe 1
          </p>
          <p
            class="MuiTypography-root MuiTypography-body1 _recipeType_a06f98 css-ahj2mt-MuiTypography-root"
          >
            Основное
          </p>
          <div
            class="MuiStack-root _buttonsPanel_a06f98 css-nen11g-MuiStack-root"
          >
            <img
              alt="Edit Recipe Button"
              class="_recipeCardLogo_a06f98"
              src="/src/assets/pencil.svg"
            />
            <img
              alt="Show Recipe Button"
              class="_recipeCardLogo_a06f98"
              src="/src/assets/eye.svg"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root _recipeCardWrapper_a06f98 css-bhp9pd-MuiPaper-root-MuiCard-root"
    >
      <div
        class="MuiStack-root _recipeContainer_a06f98 css-nen11g-MuiStack-root"
      >
        <img
          class="_recipeCardImage_a06f98"
          id="00000000-0000-0000-0000-000000000002"
          src="test/image/src/2"
        />
        <div
          class="MuiStack-root _recipeData_a06f98 css-nen11g-MuiStack-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap _recipeName_a06f98 css-fvtpii-MuiTypography-root"
          >
            Test Recipe 2
          </p>
          <p
            class="MuiTypography-root MuiTypography-body1 _recipeType_a06f98 css-ahj2mt-MuiTypography-root"
          >
            Десерт
            <img
              src="/src/assets/vegetarian.svg"
              width="12"
            />
          </p>
          <div
            class="MuiStack-root _buttonsPanel_a06f98 css-nen11g-MuiStack-root"
          >
            <img
              alt="Edit Recipe Button"
              class="_recipeCardLogo_a06f98"
              src="/src/assets/pencil.svg"
            />
            <img
              alt="Show Recipe Button"
              class="_recipeCardLogo_a06f98"
              src="/src/assets/eye.svg"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root _recipeCardWrapper_a06f98 css-bhp9pd-MuiPaper-root-MuiCard-root"
    >
      <div
        class="MuiStack-root _recipeContainer_a06f98 css-nen11g-MuiStack-root"
      >
        <img
          class="_recipeCardImage_a06f98"
          id="00000000-0000-0000-0000-000000000003"
          src="test/image/src/3"
        />
        <div
          class="MuiStack-root _recipeData_a06f98 css-nen11g-MuiStack-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap _recipeName_a06f98 css-fvtpii-MuiTypography-root"
          >
            Test Recipe 3
          </p>
          <p
            class="MuiTypography-root MuiTypography-body1 _recipeType_a06f98 css-ahj2mt-MuiTypography-root"
          >
            Салат
          </p>
          <div
            class="MuiStack-root _buttonsPanel_a06f98 css-nen11g-MuiStack-root"
          >
            <img
              alt="Edit Recipe Button"
              class="_recipeCardLogo_a06f98"
              src="/src/assets/pencil.svg"
            />
            <img
              alt="Show Recipe Button"
              class="_recipeCardLogo_a06f98"
              src="/src/assets/eye.svg"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Testing: RecipesBlock > should render if have not found recipe 1`] = `
<div>
  <div
    class="MuiStack-root _recipesServiceWrapper_4b0ee0 css-1ucnu3w-MuiStack-root"
  >
    <img
      class="_recipesBlockLogo_4b0ee0"
      src="/src/assets/pancakes.svg"
    />
    <p
      class="MuiTypography-root MuiTypography-body1 _emptyMessage_4b0ee0 css-ahj2mt-MuiTypography-root"
    >
      Рецепты не найдены
    </p>
  </div>
</div>
`;

exports[`Testing: RecipesBlock > should render if there are no recipes 1`] = `
<div>
  <div
    class="MuiStack-root _recipesServiceWrapper_4b0ee0 css-1ucnu3w-MuiStack-root"
  >
    <img
      class="_recipesBlockLogo_4b0ee0"
      src="/src/assets/hand-drawn-food.svg"
    />
    <p
      class="MuiTypography-root MuiTypography-body1 _emptyMessage_4b0ee0 css-ahj2mt-MuiTypography-root"
    >
      Добавьте первый рецепт
    </p>
  </div>
</div>
`;
